# nano_think

./: .gitignore  README.md  TODO.md  pyproject.toml
.claude/: settings.local.json
doc/: ARCH.md  TODO.md  gpu.md  install.md  training.md
nano_think/: __init__.py  config.py  data.py  mla.py  model.py  tokenizer.py  train.py  vector_store.py
nano_think/experts/: __init__.py  diffuser.py  state_space.py  transformer.py
scripts/: generate.py  gpu_verify.py  premunge.py  pretrain_experts.py  pretrain_theology.py  train_mla.py
